--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "url": "https://github.com/saidur2k/my-boiler-plate-app/issues"
   },
   "homepage": "https://github.com/saidur2k/my-boiler-plate-app#readme",
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-cli": "6.11.4",
     "babel-loader": "6.2.4",
@@ -48,7 +46,11 @@
     "commitizen": "2.8.2",
     "cross-env": "2.0.0",
     "cz-conventional-changelog": "1.1.6",
-    "standard": "*",
+    "eslint-config-standard": "6.2.1",
+    "eslint-config-standard-jsx": "3.2.0",
+    "eslint-plugin-promise": "3.4.0",
+    "eslint-plugin-react": "6.8.0",
+    "eslint-plugin-standard": "2.0.1",
     "ghooks": "1.3.2",
     "json-loader": "0.5.4",
     "mocha": "3.0.0",
@@ -57,6 +59,7 @@
     "opt-cli": "1.5.1",
     "rimraf": "2.5.4",
     "semantic-release": "4.3.5",
+    "standard": "8.6.0",
     "validate-commit-msg": "2.6.1",
     "webpack": "1.13.1"
   },
