style(just testing):

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My boiler plate app",
   "main": "dist/index.js",
   "scripts": {
-    "commit": "git-cz",
+    "commit": "git-cz -a",
     "prebuild": "rimraf dist",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
