--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,11 @@
   "extends": [
     "standard",
     "standard-jsx"
-  ]
+  ],
+  "plugins": [
+    "mocha"
+  ],
+  "env": {
+    "mocha": true
+  }
 }
