--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-boiler-plate-app",
-  "version": "0.0.0-semantically-released",
+  "version": "0.0.0-development",
   "description": "My boiler plate app",
   "main": "dist/index.js",
   "scripts": {
@@ -15,11 +15,12 @@
     "lint": "standard --verbose | snazzy",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "release": "semantic-release pre && npm publish && semantic-release post",
-    "validate": "npm-run-all --parallel test lint build"
+    "validate": "npm-run-all --parallel test lint build",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/saidur2k/my-boiler-plate-app.git"
+    "url": "https://github.com/saidur2k/my-boiler-plate-app.git"
   },
   "keywords": [
     "my-boiler-plate-app",
@@ -61,7 +62,7 @@
     "nyc": "7.1.0",
     "opt-cli": "1.5.1",
     "rimraf": "2.5.4",
-    "semantic-release": "4.3.5",
+    "semantic-release": "^6.3.2",
     "snazzy": "5.0.0",
     "standard": "8.6.0",
     "validate-commit-msg": "2.6.1",
